Fixed chart bubble going out of view

--- a/src/report/css/report.styl
+++ b/src/report/css/report.styl
@@ -857,7 +857,7 @@ tspan {
     font-size: .8em
 
 .fire-history__chart
-  max-width 550px
+  max-width 650px
   max-height 350px
   height 350px
   margin: auto
